/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.controller.test.util.xtsdownloader;

option java_package = "com.google.devtools.mobileharness.infra.controller.test.util.xtsdownloader";
option java_multiple_files = true;

// Xts dynamic download files info.
message XtsDynamicDownloadInfo {
  // The type of xts, such as CTS.
  string xts_type = 1;
  // The type of project.
  enum Project {
    UNDEFINED = 0;
    MAINLINE = 1;
    WM_EXTENSION = 2;
  }
  Project project = 2;
  // The download urls for all the android-mcts-<module>.zip.
  repeated string download_url = 3;
}

message ModuleInfoMap {
  map<string, string> module_package_to_module_info = 1;
}
